Edit some things in transelate

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,5 +10,6 @@
   "light": "Light",
   "dark": "Dark",
   "suraname": "Sura Name",
+  "count": "Number Of Praises",
   "hadethname": "Hadeth Name"
 }
